Gemba app changes

--- a/templates/gemba/downtime_rate.html
+++ b/templates/gemba/downtime_rate.html
@@ -15,7 +15,7 @@
 <h4>Downtime rate by week</h4>
 Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
 
-<table class="table table-bordered">
+<table class="mytable">
         <thead>
         <tr style="font-size:0.7vw;">
             <td> </td>
