--- a/static/table_hover.css
+++ b/static/table_hover.css
@@ -15,14 +15,14 @@ div.jumbotron.jumbotron-fluid {
   outline: 0;
 }
 
-body:not(.nohover) .mytable tbody,.mytable tr:hover {
+body:not(.nohover) .mytable tbody tr:hover {
   background-color: rgba(191, 191, 191, 0.5);
 }
 
 .mytable td:hover::after,
-.mytable thead, .mytable th:not(:empty):hover::after,
+.mytable thead th:not(:empty):hover::after,
 .mytable td:focus::after,
-.mytable thead, .mytable th:not(:empty):focus::after {
+.mytable thead th:not(:empty):focus::after {
   content: '';
   height: 10000px;
   left: 0;
@@ -44,7 +44,7 @@ body:not(.nohover) .mytable tbody,.mytable tr:hover {
 
 /* Focus stuff for mobile */
 .mytable td:focus::before,
-.mytable tbody, .mytable th:focus::before {
+.mytable tbody th:focus::before {
   background-color: lightblue;
   content: '';
   height: 100%;
