--- a/static/table_hover.css
+++ b/static/table_hover.css
@@ -2,7 +2,7 @@ div.jumbotron.jumbotron-fluid {
   background-color: transparent;
 }
 
-.mytable table {
+table {
   overflow: hidden;
   border-spacing: 0;
   border-collapse: collapse;
@@ -15,7 +15,7 @@ div.jumbotron.jumbotron-fluid {
   outline: 0;
 }
 
-.mytable body:not(.nohover) tbody tr:hover {
+body:not(.nohover) .mytable tbody tr:hover {
   background-color: rgba(191, 191, 191, 0.5);
 }
 
