--- a/templates/gemba/downtime_rate.html
+++ b/templates/gemba/downtime_rate.html
@@ -1,17 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-<head>
-    <style>
-        .high{
-            color: red;
-            font-weight: bold;
-        }
-        .central_pos{
-            vertical-align: center;
-            text-align: center;
-        }
-    </style>
-</head>
 <h4>Downtime rate by week</h4>
 Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
 
@@ -19,32 +7,32 @@ Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
         <thead>
         <tr style="font-size:0.7vw;">
             <td> </td>
-            <td colspan="2" class="central_pos"><b>Week -8</b></td>
-             <td colspan="2" class="central_pos"><b>Week -7</b></td>
-             <td colspan="2" class="central_pos"><b>Week -6</b></td>
-             <td colspan="2" class="central_pos"><b>Week -5</b></td>
-             <td colspan="2" class="central_pos"><b>Week -4</b></td>
-             <td colspan="2" class="central_pos"><b>Week -3</b></td>
-             <td colspan="2" class="central_pos"><b>Week -2</b></td>
-            <td colspan="2" class="central_pos"><b>Week -1</b></td>
-            <td colspan="2" class="central_pos"><b>Current Week</b></td>
-            <td colspan="2" class="central_pos"><b>Total</b></td>
+            <th colspan="2">Week -8</th>
+             <th colspan="2">Week -7</th>
+             <th colspan="2">Week -6</th>
+             <th colspan="2">Week -5</th>
+             <th colspan="2">Week -4</th>
+             <th colspan="2">Week -3</th>
+             <th colspan="2">Week -2</th>
+            <th colspan="2">Week -1</th>
+            <th colspan="2">Current Week</th>
+            <th colspan="2">Total</th>
         </tr>
-        <tr style="central_pos; font-size:0.7vw;">
-            <td><b>W/C</b></td>
-            <td colspan="2" class="central_pos"><b>{{ totals.start_monday_0|date:'d-M' }}</b></td>
-             <td colspan="2" class="central_pos"><b>{{ totals.start_monday_1|date:'d-M' }}</b></td>
-             <td colspan="2" class="central_pos"><b>{{ totals.start_monday_2|date:'d-M' }}</b></td>
-             <td colspan="2" class="central_pos"><b>{{ totals.start_monday_3|date:'d-M' }}</b></td>
-             <td colspan="2" class="central_pos"><b>{{ totals.start_monday_4|date:'d-M' }}</b></td>
-             <td colspan="2" class="central_pos"><b>{{ totals.start_monday_5|date:'d-M' }}</b></td>
-             <td colspan="2" class="central_pos"><b>{{ totals.start_monday_6|date:'d-M' }}</b></td>
-            <td colspan="2" class="central_pos"><b>{{ totals.start_monday_7|date:'d-M' }}</b></td>
-            <td colspan="2" class="central_pos"><b>{{ totals.start_monday_8|date:'d-M' }}</b></td>
-            <td colspan="2" class="central_pos"><b>Total</b></td>
+        <tr style="font-size:0.7vw;">
+            <th>W/C</th>
+            <th colspan="2">{{ totals.start_monday_0|date:'d-M' }}</th>
+             <th colspan="2">{{ totals.start_monday_1|date:'d-M' }}</th>
+             <th colspan="2">{{ totals.start_monday_2|date:'d-M' }}</th>
+             <th colspan="2">{{ totals.start_monday_3|date:'d-M' }}</th>
+             <th colspan="2">{{ totals.start_monday_4|date:'d-M' }}</th>
+             <th colspan="2">{{ totals.start_monday_5|date:'d-M' }}</th>
+             <th colspan="2">{{ totals.start_monday_6|date:'d-M' }}</th>
+            <th colspan="2">{{ totals.start_monday_7|date:'d-M' }}</th>
+            <th colspan="2">{{ totals.start_monday_8|date:'d-M' }}</th>
+            <th colspan="2">Total</th>
         </tr>
-        <tr style="central_pos; font-size:0.7vw;">
-            <th scope="col" style="text-align:left;">Downtime</th>
+        <tr style="font-size:0.7vw;">
+            <th scope="col">Downtime</th>
             <th scope="col">Min</th>
             <th scope="col">%</th>
             <th scope="col">Min</th>
@@ -70,41 +58,41 @@ Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
 
         <tbody>
         {% for object in report %}
-            <tr style="central_pos; font-size:0.7vw;">
-                <td>{{ object.down }}</td>
+            <tr style="font-size:0.7vw;">
+                <th>{{ object.down }}</th>
                 <td>{% if object.qty_0 == 0 %} {% else %} {{ object.qty_0 }} {% endif %}</td>
                 <td>{% if object.down_rate_0 == 0 %} {% elif object.down_rate_0 > 5 %}
-                    <div class="high">{{ object.down_rate_0 }}%</div>{% else %}{{ object.down_rate_0 }}%{% endif %}</td>
+                    <div>{{ object.down_rate_0 }}%</div>{% else %}{{ object.down_rate_0 }}%{% endif %}</td>
                 <td>{% if object.qty_1 == 0 %} {% else %} {{ object.qty_1 }} {% endif %}</td>
                 <td>{% if object.down_rate_1 == 0 %} {% elif object.down_rate_1 > 5 %}
-                    <div class="high">{{ object.down_rate_1 }}%</div>{% else %}{{ object.down_rate_1 }}%{% endif %}</td>
+                    <div>{{ object.down_rate_1 }}%</div>{% else %}{{ object.down_rate_1 }}%{% endif %}</td>
                 <td>{% if object.qty_2 == 0 %} {% else %} {{ object.qty_2 }} {% endif %}</td>
                 <td>{% if object.down_rate_2 == 0 %} {% elif object.down_rate_2 > 5 %}
-                    <div class="high">{{ object.down_rate_2 }}%</div>{% else %}{{ object.down_rate_2 }}%{% endif %}</td>
+                    <div>{{ object.down_rate_2 }}%</div>{% else %}{{ object.down_rate_2 }}%{% endif %}</td>
                 <td>{% if object.qty_3 == 0 %} {% else %} {{ object.qty_3 }} {% endif %}</td>
                 <td>{% if object.down_rate_3 == 0 %} {% elif object.down_rate_3 > 5 %}
-                    <div class="high">{{ object.down_rate_3 }}%</div>{% else %}{{ object.down_rate_3 }}%{% endif %}</td>
+                    <div>{{ object.down_rate_3 }}%</div>{% else %}{{ object.down_rate_3 }}%{% endif %}</td>
                 <td>{% if object.qty_4 == 0 %} {% else %} {{ object.qty_4 }} {% endif %}</td>
                 <td>{% if object.down_rate_4 == 0 %} {% elif object.down_rate_4 > 5 %}
-                    <div class="high">{{ object.down_rate_4 }}%</div>{% else %}{{ object.down_rate_4 }}%{% endif %}</td>
+                    <div>{{ object.down_rate_4 }}%</div>{% else %}{{ object.down_rate_4 }}%{% endif %}</td>
                 <td>{% if object.qty_5 == 0 %} {% else %} {{ object.qty_5 }} {% endif %}</td>
                 <td>{% if object.down_rate_5 == 0 %} {% elif object.down_rate_5 > 5 %}
-                    <div class="high">{{ object.down_rate_5 }}%</div>{% else %}{{ object.down_rate_5 }}%{% endif %}</td>
+                    <div>{{ object.down_rate_5 }}%</div>{% else %}{{ object.down_rate_5 }}%{% endif %}</td>
                 <td>{% if object.qty_6 == 0 %} {% else %} {{ object.qty_6 }} {% endif %}</td>
                 <td>{% if object.down_rate_6 == 0 %} {% elif object.down_rate_6 > 5 %}
-                    <div class="high">{{ object.down_rate_6 }}%</div>{% else %}{{ object.down_rate_6 }}%{% endif %}</td>
+                    <div>{{ object.down_rate_6 }}%</div>{% else %}{{ object.down_rate_6 }}%{% endif %}</td>
                 <td>{% if object.qty_7 == 0 %} {% else %} {{ object.qty_7 }} {% endif %}</td>
                 <td>{% if object.down_rate_7 == 0 %} {% elif object.down_rate_7 > 5 %}
-                    <div class="high">{{ object.down_rate_7 }}%</div>{% else %}{{ object.down_rate_7 }}%{% endif %}</td>
+                    <div>{{ object.down_rate_7 }}%</div>{% else %}{{ object.down_rate_7 }}%{% endif %}</td>
                 <td>{% if object.qty_8 == 0 %} {% else %} {{ object.qty_8 }} {% endif %}</td>
                 <td>{% if object.down_rate_8 == 0 %} {% elif object.down_rate_8 > 5 %}
-                    <div class="high">{{ object.down_rate_8 }}%</div>{% else %}{{ object.down_rate_8 }}%{% endif %}</td>
+                    <div>{{ object.down_rate_8 }}%</div>{% else %}{{ object.down_rate_8 }}%{% endif %}</td>
                 <td><b>{{ object.total }}</b></td>
                 <td><b>{{ object.total_down_rate }}%</b></td>
             </tr>
         {% endfor %}
-        <tr style="central_pos; font-size:0.7vw;">
-            <td style="text-align:left;"><b>Total downtimes</b></td>
+        <tr style="font-size:0.7vw;">
+            <th>Total downtimes</th>
             <td><b>{% if totals.total_weekly_0 == 0 %}{% else %}{{ totals.total_weekly_0 }}{% endif %}</b></td>
             <td><b>{% if totals.overall_down_rate_0 == 0 %}{% else %}{{ totals.overall_down_rate_0 }}%{% endif %}</b> </td>
             <td><b>{% if totals.total_weekly_1 == 0 %}{% else %}{{ totals.total_weekly_1 }}{% endif %}</b></td>
@@ -127,17 +115,17 @@ Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
             <td><b>{{ totals.all_down_rate }}%</b></td>
         </tr>
          <tr style="font-size:0.7vw;">
-            <td style="text-align:left;"><b>Total Available Time</b></td>
-            <td colspan="2" style="text-align:center;"><b>{% if totals.total_available_time_0 == 0 %}{% else %}{{ totals.total_available_time_0 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_available_time_1 == 0 %}{% else %}{{ totals.total_available_time_1 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_available_time_2 == 0 %}{% else %}{{ totals.total_available_time_2 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_available_time_3 == 0 %}{% else %}{{ totals.total_available_time_3 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_available_time_4 == 0 %}{% else %}{{ totals.total_available_time_4 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_available_time_5 == 0 %}{% else %}{{ totals.total_available_time_5 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_available_time_6 == 0 %}{% else %}{{ totals.total_available_time_6 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_available_time_7 == 0 %}{% else %}{{ totals.total_available_time_7 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_available_time_8 == 0 %}{% else %}{{ totals.total_available_time_8 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b> {{ totals.total_all_output }}</b></td>
+            <th>Total Available Time</th>
+            <td colspan="2"><b>{% if totals.total_available_time_0 == 0 %}{% else %}{{ totals.total_available_time_0 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_available_time_1 == 0 %}{% else %}{{ totals.total_available_time_1 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_available_time_2 == 0 %}{% else %}{{ totals.total_available_time_2 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_available_time_3 == 0 %}{% else %}{{ totals.total_available_time_3 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_available_time_4 == 0 %}{% else %}{{ totals.total_available_time_4 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_available_time_5 == 0 %}{% else %}{{ totals.total_available_time_5 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_available_time_6 == 0 %}{% else %}{{ totals.total_available_time_6 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_available_time_7 == 0 %}{% else %}{{ totals.total_available_time_7 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_available_time_8 == 0 %}{% else %}{{ totals.total_available_time_8 }}{% endif %}</b></td>
+             <td colspan="2"><b> {{ totals.total_all_output }}</b></td>
         </tr>
         </tbody>
     </table>
