--- a/templates/gemba/scrap_rate.html
+++ b/templates/gemba/scrap_rate.html
@@ -6,72 +6,68 @@
             color: red;
             font-weight: bold;
         }
-        .central_pos{
-            vertical-align: center;
-            text-align: center;
-        }
     </style>
 </head>
 <h4>Scrap rate by week</h4>
 Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
 
-<table class="table table-bordered">
+<table class="mytable">
         <thead>
         <tr style="font-size:0.7vw;">
             <td> </td>
-            <td colspan="2" class="central_pos"><b>Week -8</b></td>
-             <td colspan="2" class="central_pos"><b>Week -7</b></td>
-             <td colspan="2" class="central_pos"><b>Week -6</b></td>
-             <td colspan="2" class="central_pos"><b>Week -5</b></td>
-             <td colspan="2" class="central_pos"><b>Week -4</b></td>
-             <td colspan="2" class="central_pos"><b>Week -3</b></td>
-             <td colspan="2" class="central_pos"><b>Week -2</b></td>
-            <td colspan="2" class="central_pos"><b>Week -1</b></td>
-            <td colspan="2" class="central_pos"><b>Current Week</b></td>
-            <td colspan="2" class="central_pos"><b>Total</b></td>
+            <th colspan="2" style="text-align: center;">Week -8</th>
+             <th colspan="2" style="text-align: center;">Week -7</th>
+             <th colspan="2" style="text-align: center;">Week -6</th>
+             <th colspan="2" style="text-align: center;">Week -5</th>
+             <th colspan="2" style="text-align: center;">Week -4</th>
+             <th colspan="2" style="text-align: center;">Week -3</th>
+             <th colspan="2" style="text-align: center;">Week -2</th>
+            <th colspan="2" style="text-align: center;">Week -1</th>
+            <th colspan="2" style="text-align: center;">Current Week</th>
+            <th colspan="2" style="text-align: center;">Total</th>
         </tr>
-        <tr style="central_pos; font-size:0.7vw;">
-            <td><b>W/C</b></td>
-            <td colspan="2" class="central_pos"><b>{{ totals.start_monday_0|date:'d-M' }}</b></td>
-             <td colspan="2" class="central_pos"><b>{{ totals.start_monday_1|date:'d-M' }}</b></td>
-             <td colspan="2" class="central_pos"><b>{{ totals.start_monday_2|date:'d-M' }}</b></td>
-             <td colspan="2" class="central_pos"><b>{{ totals.start_monday_3|date:'d-M' }}</b></td>
-             <td colspan="2" class="central_pos"><b>{{ totals.start_monday_4|date:'d-M' }}</b></td>
-             <td colspan="2" class="central_pos"><b>{{ totals.start_monday_5|date:'d-M' }}</b></td>
-             <td colspan="2" class="central_pos"><b>{{ totals.start_monday_6|date:'d-M' }}</b></td>
-            <td colspan="2" class="central_pos"><b>{{ totals.start_monday_7|date:'d-M' }}</b></td>
-            <td colspan="2" class="central_pos"><b>{{ totals.start_monday_8|date:'d-M' }}</b></td>
-            <td colspan="2" class="central_pos"><b>Total</b></td>
+        <tr style="font-size:0.7vw;">
+            <th><b>W/C</b></th>
+            <th colspan="2" style="text-align: center;">{{ totals.start_monday_0|date:'d-M' }}</th>
+             <th colspan="2" style="text-align: center;">{{ totals.start_monday_1|date:'d-M' }}</th>
+             <th colspan="2" style="text-align: center;">{{ totals.start_monday_2|date:'d-M' }}</th>
+             <th colspan="2" style="text-align: center;">{{ totals.start_monday_3|date:'d-M' }}</th>
+             <th colspan="2" style="text-align: center;">{{ totals.start_monday_4|date:'d-M' }}</th>
+             <th colspan="2" style="text-align: center;">{{ totals.start_monday_5|date:'d-M' }}</th>
+             <th colspan="2" style="text-align: center;">{{ totals.start_monday_6|date:'d-M' }}</th>
+            <th colspan="2" style="text-align: center;">{{ totals.start_monday_7|date:'d-M' }}</th>
+            <th colspan="2" style="text-align: center;">{{ totals.start_monday_8|date:'d-M' }}</th>
+            <th colspan="2" style="text-align: center;">Total</th>
         </tr>
-        <tr style="central_pos; font-size:0.7vw;">
+        <tr style="font-size:0.7vw;">
             <th scope="col" style="text-align:left;">Scrap</th>
-            <th scope="col">Qty</th>
-            <th scope="col">%</th>
-            <th scope="col">Qty</th>
-            <th scope="col">%</th>
-            <th scope="col">Qty</th>
-            <th scope="col">%</th>
-            <th scope="col">Qty</th>
-            <th scope="col">%</th>
-            <th scope="col">Qty</th>
-            <th scope="col">%</th>
-            <th scope="col">Qty</th>
-            <th scope="col">%</th>
-            <th scope="col">Qty</th>
-            <th scope="col">%</th>
-            <th scope="col">Qty</th>
-            <th scope="col">%</th>
-            <th scope="col">Qty</th>
-            <th scope="col">%</th>
-            <th scope="col">Qty</th>
-            <th scope="col">%</th>
+            <th scope="col" style="text-align: center;">Qty</th>
+            <th scope="col" style="text-align: center;">%</th>
+            <th scope="col" style="text-align: center;">Qty</th>
+            <th scope="col" style="text-align: center;">%</th>
+            <th scope="col" style="text-align: center;">Qty</th>
+            <th scope="col" style="text-align: center;">%</th>
+            <th scope="col" style="text-align: center;">Qty</th>
+            <th scope="col" style="text-align: center;">%</th>
+            <th scope="col" style="text-align: center;">Qty</th>
+            <th scope="col" style="text-align: center;">%</th>
+            <th scope="col" style="text-align: center;">Qty</th>
+            <th scope="col" style="text-align: center;">%</th>
+            <th scope="col" style="text-align: center;">Qty</th>
+            <th scope="col" style="text-align: center;">%</th>
+            <th scope="col" style="text-align: center;">Qty</th>
+            <th scope="col" style="text-align: center;">%</th>
+            <th scope="col" style="text-align: center;">Qty</th>
+            <th scope="col" style="text-align: center;">%</th>
+            <th scope="col" style="text-align: center;">Qty</th>
+            <th scope="col" style="text-align: center;">%</th>
         </tr>
         </thead>
 
         <tbody>
         {% for object in report %}
-            <tr style="central_pos; font-size:0.7vw;">
-                <td>{{ object.scrap }}</td>
+            <tr style="font-size:0.7vw;">
+                <th>{{ object.scrap }}</th>
                 <td>{% if object.qty_0 == 0 %} {% else %} {{ object.qty_0 }} {% endif %}</td>
                 <td>{% if object.scrap_rate_0 == 0 %} {% elif object.scrap_rate_0 > 2 %}
                     <div class="high">{{ object.scrap_rate_0 }}%</div>{% else %}{{ object.scrap_rate_0 }}%{% endif %}</td>
@@ -104,7 +100,7 @@ Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
             </tr>
         {% endfor %}
         <tr style="central_pos; font-size:0.7vw;">
-            <td style="text-align:left;"><b>Total Scrap Qty</b></td>
+            <th><b>Total Scrap Qty</b></th>
             <td><b>{% if totals.total_weekly_0 == 0 %}{% else %}{{ totals.total_weekly_0 }}{% endif %}</b></td>
             <td><b>{% if totals.overall_scrap_rate_0 == 0 %}{% else %}{{ totals.overall_scrap_rate_0 }}%{% endif %}</b> </td>
             <td><b>{% if totals.total_weekly_1 == 0 %}{% else %}{{ totals.total_weekly_1 }}{% endif %}</b></td>
@@ -127,17 +123,17 @@ Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
             <td><b>{{ totals.all_scrap_rate }}%</b></td>
         </tr>
          <tr style="font-size:0.7vw;">
-            <td style="text-align:left;"><b>Total Made</b></td>
-            <td colspan="2" style="text-align:center;"><b>{% if totals.total_output_0 == 0 %}{% else %}{{ totals.total_output_0 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_output_1 == 0 %}{% else %}{{ totals.total_output_1 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_output_2 == 0 %}{% else %}{{ totals.total_output_2 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_output_3 == 0 %}{% else %}{{ totals.total_output_3 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_output_4 == 0 %}{% else %}{{ totals.total_output_4 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_output_5 == 0 %}{% else %}{{ totals.total_output_5 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_output_6 == 0 %}{% else %}{{ totals.total_output_6 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_output_7 == 0 %}{% else %}{{ totals.total_output_7 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b>{% if totals.total_output_8 == 0 %}{% else %}{{ totals.total_output_8 }}{% endif %}</b></td>
-             <td colspan="2" style="text-align:center;"><b> {{ totals.total_all_output }}</b></td>
+            <th>Total Made</th>
+            <td colspan="2"><b>{% if totals.total_output_0 == 0 %}{% else %}{{ totals.total_output_0 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_output_1 == 0 %}{% else %}{{ totals.total_output_1 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_output_2 == 0 %}{% else %}{{ totals.total_output_2 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_output_3 == 0 %}{% else %}{{ totals.total_output_3 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_output_4 == 0 %}{% else %}{{ totals.total_output_4 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_output_5 == 0 %}{% else %}{{ totals.total_output_5 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_output_6 == 0 %}{% else %}{{ totals.total_output_6 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_output_7 == 0 %}{% else %}{{ totals.total_output_7 }}{% endif %}</b></td>
+             <td colspan="2"><b>{% if totals.total_output_8 == 0 %}{% else %}{{ totals.total_output_8 }}{% endif %}</b></td>
+             <td colspan="2"><b> {{ totals.total_all_output }}</b></td>
         </tr>
         </tbody>
     </table>
