--- a/static/table_hover.css
+++ b/static/table_hover.css
@@ -9,6 +9,10 @@ table {
   z-index: 0;
 }
 
+.framedtbody tbody {
+ border: 1px solid grey;
+}
+
 td {
  vertical-align: center;
  text-align: center;
