Gemba app changes

--- a/templates/gemba/weekly_report_by_line.html
+++ b/templates/gemba/weekly_report_by_line.html
@@ -18,7 +18,7 @@
 
 {% block content %}
 <h4>Pareto Weekly Compare Report</h4>
-<br/>
+<h5>{{ line_name }} - {{ shift }} </h5>
 <br/>
 
 <table class="mytable">
