Gemba App changes

--- a/static/table_hover.css
+++ b/static/table_hover.css
@@ -9,11 +9,7 @@ table {
   z-index: 0;
 }
 
-.framedtr tr {
- border: 2px solid grey;
-}
-
-td {
+.mytable td {
  vertical-align: center;
  text-align: center;
 }
