--- a/templates/gemba/weekly_report_by_line.html
+++ b/templates/gemba/weekly_report_by_line.html
@@ -25,13 +25,20 @@
     <thead>
         <tr>
             <th scope="col">Day</th>
-            <th scope="col" style="text-align: center;">Monday</th>
-            <th scope="col" style="text-align: center;">Tuesday</th>
-            <th scope="col" style="text-align: center;">Wednesday</th>
-            <th scope="col" style="text-align: center;">Thursday</th>
-            <th scope="col" style="text-align: center;">Friday</th>
-            <th scope="col" style="text-align: center;">Saturday</th>
-            <th scope="col" style="text-align: center;">Sunday</th>
+            <th scope="col" style="text-align: center;">{% if shift == "Night shift" %} Sunday {% else %}
+                Monday {% endif %}</th>
+            <th scope="col" style="text-align: center;">{% if shift == "Night shift" %} Monday {% else %}
+                Tuesday {% endif %}</th>
+            <th scope="col" style="text-align: center;">{% if shift == "Night shift" %} Tuesday {% else %}
+                Wednesday {% endif %}</th>
+            <th scope="col" style="text-align: center;">{% if shift == "Night shift" %} Wednesday {% else %}
+                Thursday {% endif %}</th>
+            <th scope="col" style="text-align: center;">{% if shift == "Night shift" %} Thursday {% else %}
+                Friday {% endif %}</th>
+            <th scope="col" style="text-align: center;">{% if shift == "Night shift" %} Friday {% else %}
+                Saturday {% endif %}</th>
+            <th scope="col" style="text-align: center;">{% if shift == "Night shift" %} Saturday {% else %}
+                Sunday {% endif %}</th>
         </tr>
     </thead>
     <tbody>
@@ -66,13 +73,13 @@
         {% for elem in report|slice:down_idx%}
         <tr>
             <th scope="row">{{ elem.col0 }}</th>
-            <td>{% if elem.col1 == 0 %} {% else %}{{ elem.col1 }}{% endif %}</td>
-            <td>{% if elem.col2 == 0 %} {% else %}{{ elem.col2 }}{% endif %}</td>
-            <td>{% if elem.col3 == 0 %} {% else %}{{ elem.col3 }}{% endif %}</td>
-            <td>{% if elem.col4 == 0 %} {% else %}{{ elem.col4 }}{% endif %}</td>
-            <td>{% if elem.col5 == 0 %} {% else %}{{ elem.col5 }}{% endif %}</td>
-            <td>{% if elem.col6 == 0 %} {% else %}{{ elem.col6 }}{% endif %}</td>
-            <td>{% if elem.col7 == 0 %} {% else %}{{ elem.col7 }}{% endif %}</td>
+            <td>{% if elem.col1 == 0 %} {% else %}{{ elem.col1 }} min{% endif %}</td>
+            <td>{% if elem.col2 == 0 %} {% else %}{{ elem.col2 }} min{% endif %}</td>
+            <td>{% if elem.col3 == 0 %} {% else %}{{ elem.col3 }} min{% endif %}</td>
+            <td>{% if elem.col4 == 0 %} {% else %}{{ elem.col4 }} min{% endif %}</td>
+            <td>{% if elem.col5 == 0 %} {% else %}{{ elem.col5 }} min{% endif %}</td>
+            <td>{% if elem.col6 == 0 %} {% else %}{{ elem.col6 }} min{% endif %}</td>
+            <td>{% if elem.col7 == 0 %} {% else %}{{ elem.col7 }} min{% endif %}</td>
         </tr>
         {% endfor %}
     </tbody>
@@ -80,13 +87,13 @@
         {% for elem in report|slice:scrap_idx%}
         <tr>
             <th scope="row">{{ elem.col0 }}</th>
-            <td>{% if elem.col1 == 0 %} {% else %}{{ elem.col1 }}{% endif %}</td>
-            <td>{% if elem.col2 == 0 %} {% else %}{{ elem.col2 }}{% endif %}</td>
-            <td>{% if elem.col3 == 0 %} {% else %}{{ elem.col3 }}{% endif %}</td>
-            <td>{% if elem.col4 == 0 %} {% else %}{{ elem.col4 }}{% endif %}</td>
-            <td>{% if elem.col5 == 0 %} {% else %}{{ elem.col5 }}{% endif %}</td>
-            <td>{% if elem.col6 == 0 %} {% else %}{{ elem.col6 }}{% endif %}</td>
-            <td>{% if elem.col7 == 0 %} {% else %}{{ elem.col7 }}{% endif %}</td>
+            <td>{% if elem.col1 == 0 %} {% else %}{{ elem.col1 }} parts{% endif %}</td>
+            <td>{% if elem.col2 == 0 %} {% else %}{{ elem.col2 }} parts{% endif %}</td>
+            <td>{% if elem.col3 == 0 %} {% else %}{{ elem.col3 }} parts{% endif %}</td>
+            <td>{% if elem.col4 == 0 %} {% else %}{{ elem.col4 }} parts{% endif %}</td>
+            <td>{% if elem.col5 == 0 %} {% else %}{{ elem.col5 }} parts{% endif %}</td>
+            <td>{% if elem.col6 == 0 %} {% else %}{{ elem.col6 }} parts{% endif %}</td>
+            <td>{% if elem.col7 == 0 %} {% else %}{{ elem.col7 }} parts{% endif %}</td>
         </tr>
         {% endfor %}
     </tbody>
