--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -22,7 +22,7 @@
                   </button>
                 </div>
             </form>
-            <table class="styled-table">
+            <table class="table table-hover">
                 <thead>
                     <tr>
                         <th scope="col">Month</th>
@@ -63,7 +63,7 @@
                 </tbody>
             </table>
           <h4>Yesterday's 5 best results ({{ yesterday|date:'d-m-Y' }})</h4>
-            <table class="styled-table">
+            <table class="table table-hover">
                 <thead>
                     <tr>
                         <th scope="col">Pos</th>
