Gemba App changes

--- a/templates/gemba/daily_oee_report.html
+++ b/templates/gemba/daily_oee_report.html
@@ -16,6 +16,7 @@
             <th scope="col">Performance</th>
             <th scope="col">Quality</th>
             <th scope="col">OEE</th>
+            <th scope="col">Target</th>
         </tr>
         </thead>
         <tbody>
@@ -30,6 +31,8 @@
             <td>{{ item.performance }}%</td>
             <td>{{ item.quality }}%</td>
             <td>{{ item.oee }}%</td>
+            <td>{% if item.target < item.oee %}&uarr;{% elif item.target|sub:5 > item.oee %}&darr;
+                {% else %}&#8275;{% endif %}{{ item.target }}%</td>
         </tr>
         {% endfor %}
         <tr>
@@ -41,6 +44,7 @@
             <td><b>{{ last.avg_performance }}%</b></td>
             <td><b>{{ last.avg_quality }}%</b></td>
             <td><b>{{ last.avg_oee }}%</b></td>
+            <td></td>
         {% endwith %}
         </tr>
         </tbody>
